--- a/package.json
+++ b/package.json
@@ -14,21 +14,24 @@
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "@reduxjs/toolkit": "^1.5.0",
-    "expo": "~40.0.0",
+    "expo": "^40.0.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-collapsible": "^2.8.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-cli": "^2.0.1",
     "react-native-collapsible": "^1.4.0",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-numeric-input": "^1.8.3",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.0",
+    "react-native-sound": "^0.11.0",
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.11.7",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "rn-nodeify": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
