--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^1.5.0",
     "expo": "^40.0.0",
     "expo-status-bar": "~1.0.3",
+    "prettier": "^2.2.1",
     "react": "16.13.1",
     "react-collapsible": "^2.8.1",
     "react-dom": "16.13.1",
