--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "react": "16.13.1",
     "react-collapsible": "^2.8.1",
     "react-dom": "16.13.1",
+    "react-dropdown": "^1.9.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-cli": "^2.0.1",
     "react-native-collapsible": "^1.4.0",
+    "react-native-dropdown-picker": "^3.7.8",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-numeric-input": "^1.8.3",
     "react-native-reanimated": "~1.13.0",
@@ -33,7 +35,8 @@
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.11.7",
     "redux-persist": "^6.0.0",
-    "rn-nodeify": "^10.2.0"
+    "rn-nodeify": "^10.2.0",
+    "sharingan-rn-modal-dropdown": "^1.3.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
