--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^1.5.0",
     "expo": "^40.0.0",
     "expo-status-bar": "~1.0.3",
+    "firebase": "^8.2.2",
     "prettier": "^2.2.1",
     "react": "16.13.1",
     "react-collapsible": "^2.8.1",
@@ -27,6 +28,7 @@
     "react-native-collapsible": "^1.4.0",
     "react-native-dropdown-picker": "^3.7.8",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-numeric-input": "^1.8.3",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
@@ -36,7 +38,8 @@
     "react-native-web": "~0.11.7",
     "redux-persist": "^6.0.0",
     "rn-nodeify": "^10.2.0",
-    "sharingan-rn-modal-dropdown": "^1.3.0"
+    "sharingan-rn-modal-dropdown": "^1.3.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
