--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "react-native-dropdown-picker": "^3.7.8",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-gifted-chat": "^0.16.3",
+    "react-native-hide-show-password-input": "^1.2.0",
     "react-native-numeric-input": "^1.8.3",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.0",
     "react-native-sound": "^0.11.0",
+    "react-native-sound-player": "^0.10.5",
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.11.7",
     "redux-persist": "^6.0.0",
